fix broken stuff

--- a/web/app/config.ini
+++ b/web/app/config.ini
@@ -7,3 +7,9 @@ DB_NAME=thatsthespirit
 DB_USER=pixeline
 DB_PASSWORD=Q5p2HqJcjaDaLqep
 DB_HOST=mysql
+UPLOADS=/uploads
+SMTP_HOST=smtp.gmail.com
+SMTP_USER=aplennevaux@gmail.com
+SMTP_PORT=465
+SMTP_PROTOCOL=SSL
+SMTP_PASSWORD=W3 Are tHe Kings0f RGB!
