post-golive fixes

--- a/web/app/config.production.ini
+++ b/web/app/config.production.ini
@@ -1,6 +1,7 @@
 [globals]
 AUTOLOAD=../app/classes/
-DEBUG=1
+DEBUG=0
+CACHE=memcached=localhost:11211
 UI=../app/ui/
 WWWROOT=https://thatsthespir.it
 DB_NAME=thatsthespirit
