--- a/web/app/config.ini
+++ b/web/app/config.ini
@@ -1,11 +1,13 @@
 [globals]
-AUTOLOAD=../app/classes/
+AUTOLOAD=../app/api/
 CACHE=FALSE
+STATIC_CACHE_EXPIRATION=5
+DB_CACHE_EXPIRATION=5
 DB_NAME=thatsthespirit
 DB_USER=pixeline
 DB_PASSWORD=Q5p2HqJcjaDaLqep
 DB_HOST=mysqldb
-DEBUG=9
+DEBUG=1
 ENV=dev
 SMTP_HOST=smtp.gmail.com
 SMTP_USER=aplennevaux@gmail.com
