--- a/web/app/config.production.ini
+++ b/web/app/config.production.ini
@@ -1,11 +1,13 @@
 [globals]
 AUTOLOAD=../app/classes/
 CACHE=memcached=localhost:11211
+STATIC_CACHE_EXPIRATION=360
+DB_CACHE_EXPIRATION=86400
 DB_NAME=thatsthespirit
 DB_USER=ttspirit
 DB_PASSWORD=Q5p2HqJcjaDaLqep
 DB_HOST=localhost
-DEBUG=9
+DEBUG=1
 ENV=production
 UI=../app/ui/
 WWWROOT=https://thatsthespir.it
