add correct db password

--- a/web/app/config.production.ini
+++ b/web/app/config.production.ini
@@ -4,7 +4,7 @@ CACHE=memcached=localhost:11211
 STATIC_CACHE_EXPIRATION=360
 DB_CACHE_EXPIRATION=86400
 DB_NAME=thatsthespirit
-DB_USER=ttspirit
+DB_USER=thatsthespirit
 DB_PASSWORD=Q5p2HqJcjaDaLqep
 DB_HOST=localhost
 DEBUG=1
