--- a/web/app/config.production.ini
+++ b/web/app/config.production.ini
@@ -1,6 +1,6 @@
 [globals]
-AUTOLOAD=../app/classes/
-CACHE=memcached=localhost:11211
+AUTOLOAD=../app/api/
+CACHE=false
 STATIC_CACHE_EXPIRATION=360
 DB_CACHE_EXPIRATION=86400
 DB_NAME=thatsthespirit
@@ -10,4 +10,4 @@ DB_HOST=localhost
 DEBUG=1
 ENV=production
 UI=../app/ui/
-WWWROOT=https://thatsthespir.it
+WWWROOT=https://api.thatsthespir.it
