--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ web/app/composer.json
 web/app/vendor
 web/app/tmp
 data/db/mysql
+web/node_modules
 # PHPStorm
 .idea/**/workspace.xml
 .idea/**/tasks.xml
