update config prod

--- a/web/app/config.production.ini
+++ b/web/app/config.production.ini
@@ -2,8 +2,8 @@
 AUTOLOAD=../app/classes/
 CACHE=memcached=localhost:11211
 DB_NAME=thatsthespirit
-DB_USER=ttspirit
-DB_PASSWORD=Q5p2HqJcjaDaLqep
+DB_USER=thatsthespirit
+DB_PASSWORD=Pourquoi pas 212?
 DB_HOST=localhost
 DEBUG=0
 ENV=production
