update prod config

--- a/web/app/config.production.ini
+++ b/web/app/config.production.ini
@@ -2,7 +2,7 @@
 AUTOLOAD=../app/classes/
 CACHE=memcached=localhost:11211
 DB_NAME=thatsthespirit
-DB_USER=thatsthespirit
+DB_USER=pixeline
 DB_PASSWORD=Pourquoi pas 212?
 DB_HOST=localhost
 DEBUG=0
