--- a/web/app/composer.json
+++ b/web/app/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "require": {
         "php": "^7.0",
-        "bcosca/fatfree": "^3.6",
+        "bcosca/fatfree": "*",
         "hybridauth/hybridauth": "^2.9",
         "verot/class.upload.php": "*",
         "xfra35/f3-cron": "*"
